yaml/was.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: was-server
  name: was-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was-server
  template:
    metadata:
      labels:
        app: was-server
    spec:
      containers:
      - name: was-server
        image: ksw7734/tomcat:tomcat1_v1.1
        ports:
          - containerPort: 8080
