yaml/was_service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  labels:
    app: was-server
  
spec:
  type: ClusterIP
    #  clusterIP: 10.84.7.72
  selector:
    app: was-server
  ports:
    - name: live
      port: 8009
      targetPort: 8009
    - name: test
      port: 8080
      targetPort: 8080
