yaml/web_service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-web
spec:
  selector:
    app: front-web
  ports:
  - port: 80 # 사용자들이 접속할 포트
    targetPort: 80 # 파드의 포트번호
  type: NodePort
