yaml/webapp-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: webapp.k8s.example.com
      http:
        paths:
          - backend:
              service:
                name: hello-nginx
                port:
                  number: 8080
            path: /
            pathType: Prefix
